Fixed first post getting cut off at the top

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -29,7 +29,7 @@
   float: left;
 }
 .menu-list {
-  line-height: $header-thickness;
+  line-height: 56px;
   float: right;
 }
 .menu-link {
